--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    testImplementation 'junit:junit:4.13.2'
     debugImplementation 'im.dino:dbinspector:4.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
